--- a/src/styles/navigation.less
+++ b/src/styles/navigation.less
@@ -1,5 +1,7 @@
 @import ( reference ) '@wikimedia/codex-design-tokens/theme-wikimedia-ui.less';
 
+/******* NAVIGATION *******/
+
 .instantDiffs-navigation {
 	margin: 0 -16px 1em;
 	padding: 1em 16px;
@@ -144,8 +146,6 @@
 
 		> .oo-ui-buttonElement-button {
 			margin: 0;
-			padding-right: 12px;
-			padding-left: 12px;
 		}
 	}
 
